🐛 Fix overflow on blog pages when images

--- a/public/global.css
+++ b/public/global.css
@@ -85,3 +85,7 @@ pre {
 .blog-entry h6::before {
 	content: '######';
 }
+
+.blog-entry img {
+	max-width: 100%;
+}
